Implement methods to adding and removing tasks

--- a/component.html
+++ b/component.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@0.3.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="scripts/app_todo.js" defer ></script>
 </head>
 <body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
     <div class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans">
@@ -12,21 +13,22 @@
         <div class="mb-4">
             <h1 class="text-grey-darkest">Todo List</h1>
             <div class="flex mt-4">
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 mr-4 text-grey-darker" placeholder="Add Todo">
-                <button class="flex-no-shrink p-2 border-2 rounded text-teal border-teal hover:text-white hover:bg-teal">Add</button>
+                <input id= "usr_input"class="shadow appearance-none border rounded w-full py-2 px-3 mr-4 text-grey-darker" placeholder="Add Todo">
+                <button id="button_add" class="flex-no-shrink p-2 border-2 rounded text-teal border-teal hover:text-white hover:bg-teal">Add</button>
             </div>
         </div>
-        <div>
-            <div class="flex mb-4 items-center">
+        <div id="div_container">
+           <div id="div_template" class="hidden mb-4 items-center">
                 <p class="w-full text-grey-darkest">Add another component to Tailwind Components</p>
                 <button class="flex-no-shrink p-2 ml-4 mr-2 border-2 rounded hover:text-white text-green border-green hover:bg-green">Done</button>
                 <button class="flex-no-shrink p-2 ml-2 border-2 rounded text-red border-red hover:text-white hover:bg-red">Remove</button>
             </div>
+<!-- 
           	<div class="flex mb-4 items-center">
                 <p class="w-full line-through text-green">Submit Todo App Component to Tailwind Components</p>
                 <button class="flex-no-shrink p-2 ml-4 mr-2 border-2 rounded hover:text-white text-grey border-grey hover:bg-grey">Not Done</button>
                 <button class="flex-no-shrink p-2 ml-2 border-2 rounded text-red border-red hover:text-white hover:bg-red">Remove</button>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
